--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
+server:
+  port: 15688
 spring:
   datasource:
-    #    username: limc
     username: root
     password: data19
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/news?useSSL=false
+    url: jdbc:mariadb://database-1.cdvs0gsza8rk.ap-northeast-2.rds.amazonaws.com:3306/news?useSSL=false
   jpa:
     hibernate:
       ddl-auto: update
